landing page gg
landing page opzet

--- a/landing page GG/index.html
+++ b/landing page GG/index.html
@@ -51,6 +51,33 @@
       <div>
       <img class="campingpic" src="assets/campingpic2.jpg" alt="campingpic 2">
       </div>
+     <div class="intro-container">
+      <div class="intro-text--title-container">
+        <div class="title-intro"><h1>Lorem Ipsum</h6></div>
+        <div class="intro-content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptate aperiam a quos, earum laborum delectus in nobis sit eos consectetur corporis, voluptatem ullam soluta. Quod at modi, optio beatae sequi magni consequuntur perspiciatis error provident et, debitis labore! Maiores necessitatibus eaque blanditiis quia enim libero sapiente consequuntur accusamus ea.</p></div>
+      </div>
+      <div class="intro-pic-container">
+        <img src="assets/intro-pic2.jpeg" alt="intro pic 2" class="intro-pic">
+      </div>
+    </div>
+      <div>
+
+      </div>
 </body>
 <script src="script.js"></script>
+<footer>
+    <div class="footer">
+      <div class="footer-content">
+        <div class="footer-section about">
+          <h1 class="logo-text"><span>Het Groene</span>Gras</h1>
+          <p class="footer-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            voluptatum, quibusdam, voluptate, quos doloribus voluptas
+            voluptatibus quod quia quae voluptatem quas. Quisquam, voluptas
+            voluptatibus. Quisquam, voluptas voluptatibus.
+          </p>
+          <div class="contact">
+            <span><i class="serial-number"></i> &nbsp; 123-456-789</span>
+            <span><i class="fas fa-envelope"></i> &nbsp;
+</footer>
 </html>
