Last commit sprint 4
Last commit sprint 4

--- a/landingpageGG/index.html
+++ b/landingpageGG/index.html
@@ -14,13 +14,17 @@
 </head>
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Het Groene Gras</div>
+        <a href="index.html">
+            <div class="logo">Het Groene Gras</div>
+        </a>
         <div>
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="Over.html">Over ons</a></li>
+            <li><a href="faciliteiten.html">faciliteiten</a></li>
+            <li><a href="omgeving.html">omgeving</a></li>
             <li><a href="verblijf.html">Verblijf</a></li>
             <li><a href="http://boerberrtttttt/landingpageGG/login/login.php">Login</a></li>
+            <li><a href="http://boerberrtttttt/landingpageGG/contact.php">contact</a></li>
             <div class="reservering_btn_container">
             <li class="reservering_btn"><a href="#Boek uw vakantie">Boek uw Vakantie</a></li>
           </div>
