--- a/landingpageGG/verblijf.html
+++ b/landingpageGG/verblijf.html
@@ -15,20 +15,24 @@
     <script src="chatbot.js"></script>
 </head>
 <body>
-    <nav id="desktop-nav">
-        <div  class="logo">Het Groene Gras</div>
-        <div>
-          <ul class="nav-links">
-            <li><a href="http://localhost:3000/">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="verblijf.html">Verblijf</a></li>
-            <li><a href="http://boerberrtttttt/landingpageGG/login/login.php">Login</a></li>
-            <div class="reservering_btn_container">
-            <li class="reservering_btn"><a href="#Boek uw vakantie">Boek uw Vakantie</a></li>
-          </div>
-          </ul>
-        </div>
-      </nav>
+  <nav id="desktop-nav">
+    <a href="index.html">
+        <div class="logo">Het Groene Gras</div>
+    </a>
+    <div>
+      <ul class="nav-links">
+        <li><a href="Over.html">Over ons</a></li>
+        <li><a href="faciliteiten.html">faciliteiten</a></li>
+        <li><a href="omgeving.html">omgeving</a></li>
+        <li><a href="verblijf.html">Verblijf</a></li>
+        <li><a href="http://boerberrtttttt/landingpageGG/login/login.php">Login</a></li>
+        <li><a href="http://boerberrtttttt/landingpageGG/contact.php">contact</a></li>
+        <div class="reservering_btn_container">
+        <li class="reservering_btn"><a href="#Boek uw vakantie">Boek uw Vakantie</a></li>
+      </div>
+      </ul>
+    </div>
+  </nav>
       <nav id="hamburger-nav">
         <div class="logo">Het Groene Gras</div>
         <div class="hamburger-menu">
